kubernetes/platform/config/immich/namespace-labels.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    access.network-policy.homelab/postgres: "true"
    access.network-policy.homelab/dragonfly: "true"
