kubernetes/platform/config/immich/external-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-external
spec:
  parentRefs:
    - name: external
      namespace: istio-gateway
  hostnames:
    - "immich.${external_domain}"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
